More multithreading foundations

--- a/generic_shooter_game/CMakeLists.txt
+++ b/generic_shooter_game/CMakeLists.txt
@@ -2,16 +2,17 @@ cmake_minimum_required(VERSION 3.3)
 project(Generic\ Shooter\ Game)
 
 set(CMAKE_CXX_COMPILER "clang++")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z")
 
 set(SOURCE_FILES
-    src/main.cpp
+	src/gl/gl.cpp src/gl/gl.hpp
+	src/log/log.cpp src/log/log.hpp
     src/manager/environment.cpp src/manager/environment.hpp
 	src/manager/service.cpp src/manager/service.hpp
 	src/manager/system.cpp src/manager/system.hpp
+	src/service/resource.cpp src/service/resource.hpp
 	src/service/window_gl.cpp src/service/window_gl.hpp
-	src/log/log.cpp src/log/log.hpp
-	src/gl/gl.cpp src/gl/gl.hpp
+    src/main.cpp
 )
 
 find_package(PkgConfig REQUIRED)
@@ -19,5 +20,5 @@ pkg_search_module(GL REQUIRED gl)
 
 include_directories(../sol/src)
 add_executable(GSG ${SOURCE_FILES})
-target_link_libraries(GSG boost_program_options boost_filesystem boost_system glfw Sol ${GL_LIBRARIES})
+target_link_libraries(GSG boost_program_options boost_filesystem boost_system glfw tbb Sol ${GL_LIBRARIES})
 add_definitions(-D_DEBUG)
