--- a/sol/CMakeLists.txt
+++ b/sol/CMakeLists.txt
@@ -2,9 +2,10 @@ cmake_minimum_required(VERSION 3.3)
 project(Sol)
 
 set(CMAKE_CXX_COMPILER "clang++")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -g")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -g -Wall")
 
 set(SOURCE_FILES
+	src/file/load.cpp src/file/load.hpp
 	src/io/streamer.cpp src/io/streamer.hpp
 	src/scene/system.hpp
 	src/service/resource.hpp
@@ -13,3 +14,4 @@ set(SOURCE_FILES
 )
 
 add_library(Sol STATIC ${SOURCE_FILES})
+target_link_libraries(Sol boost_filesystem boost_system)
