--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.3)
-project(UltraSuite2K)
+project(psi-engine)
 
-add_subdirectory(sol)
+add_subdirectory(psi)
 add_subdirectory(generic_shooter_game)
