Better compiler warnings

--- a/psi/CMakeLists.txt
+++ b/psi/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.3)
 project(Psi\ Engine)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -g -Wall")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -Wall -Wextra -Wno-unused -g")
 
 set(SOURCE_FILES
 	src/log/log.cpp src/log/log.hpp
