--- a/psi/CMakeLists.txt
+++ b/psi/CMakeLists.txt
@@ -4,9 +4,10 @@ project(Psi\ Engine)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -Wall -Wextra -Wno-unused -g")
 
 set(SOURCE_FILES
-	src/impl/resource/data.hpp
-	src/impl/resource/file.cpp src/impl/resource/file.hpp
-	src/impl/resource/glsl.cpp src/impl/resource/glsl.hpp
+	src/impl/rendering/gl/gl.cpp src/impl/rendering/gl/gl.hpp
+	src/impl/rendering/gl/helper.cpp src/impl/rendering/gl/helper.hpp
+	src/impl/rendering/camera.cpp src/impl/rendering/camera.hpp
+	src/impl/rendering/resource.cpp src/impl/rendering/resource.hpp
 	src/impl/scene/default_components.hpp
 	src/impl/service/resource.cpp src/impl/service/resource.hpp
 	src/impl/service/window_gl.cpp src/impl/service/window_gl.hpp
@@ -23,7 +24,8 @@ set(SOURCE_FILES
 	src/system/system.hpp
 	src/thread/manager.cpp src/thread/manager.hpp
 	src/util/assert.hpp
-	src/util/gl.cpp src/util/gl.hpp
+	src/util/enum.hpp
+	src/util/file.cpp src/util/file.hpp
 	src/util/stream.cpp src/util/stream.hpp
 )
 
@@ -31,4 +33,4 @@ find_package(PkgConfig REQUIRED)
 pkg_search_module(GL REQUIRED gl)
 
 add_library(psi STATIC ${SOURCE_FILES})
-target_link_libraries(psi boost_filesystem boost_system ${GL_LIBRARIES} glfw tbb)
+target_link_libraries(psi boost_filesystem boost_system ${GL_LIBRARIES} glfw tbb png jpeg tiff)
