--- a/psi/CMakeLists.txt
+++ b/psi/CMakeLists.txt
@@ -34,4 +34,4 @@ pkg_search_module(GL REQUIRED gl)
 include_directories(/usr/include/ImageMagick-6)
 
 add_library(psi STATIC ${SOURCE_FILES})
-target_link_libraries(psi boost_filesystem boost_system ${GL_LIBRARIES} glfw tbb png jpeg tiff Magick++-6.Q16HDRI)
+target_link_libraries(psi boost_filesystem boost_system ${GL_LIBRARIES} glfw tbb png jpeg tiff freeimage)
