Modify Psi Mesh format; Add Psi Mesh converter;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,5 @@ cmake_minimum_required(VERSION 3.3)
 project(Game\ Collection)
 
 add_subdirectory(psi)
+add_subdirectory(mesh_converter)
 add_subdirectory(generic_shooter_game)
